# nRF52840-DK-rust

./: .gitignore  CLAUDE.md  Cargo.toml  Embed.toml  Makefile  README.md  build.rs  memory-gpio-with-softdevice.x  memory-no-softdevice.x  memory-softdevice.x  memory.x
.cargo/: config.toml
docs/: alternative-flashing-methods.md  ble-integration.md  phone-connection-guide.md  softdevice-setup.md
scripts/: debug.sh  fix-usb-permissions.sh  flash-softdevice.sh  flash.sh  test-configs.sh
src/: ble_task.rs  gpio_tasks.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs  parser.rs  terminal.rs
src/meter/: config.rs  handler.rs  mod.rs  parser.rs
src/mtu/: config.rs  error.rs  gpio_mtu.rs  mod.rs  uart_framing.rs
