[package]
name = "nrf52840-dk-template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "nRF52840-DK template with Embassy async framework, GPIO control, and BLE support"
license = "MIT OR Apache-2.0"

[dependencies]
# Embassy async framework
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-nrf = { version = "0.3", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "time"] }

# Cortex-M and embedded essentials
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Critical section implementation
critical-section = "1.2"
embedded-hal = "1.0"

# Panic handler and logging
panic-halt = "0.2"
defmt = "0.3"
defmt-rtt = "0.4"

# For async tasks
heapless = { version = "0.8", default-features = false }

# SoftDevice for BLE app (optional for main, required for BLE binary)
nrf-softdevice = { version = "0.1", features = ["defmt", "ble-peripheral", "ble-central", "ble-gatt-server", "s140", "nrf52840", "critical-section-impl"], optional = true }
nrf-softdevice-s140 = { version = "0.1", optional = true }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
incremental = false
opt-level = 1
overflow-checks = true

# Optimize dependencies even in dev mode
[profile.dev.package."*"]
codegen-units = 1
opt-level = 's'

[features]
default = ["cortex-m/critical-section-single-core"]
# GPIO feature enables cortex-m critical section for main binary
gpio = ["cortex-m/critical-section-single-core"]
# BLE feature for the BLE binary (nrf-softdevice provides critical-section-impl)
ble = ["dep:nrf-softdevice", "dep:nrf-softdevice-s140"]